# DAISY-BP

./: Makefile.am  README  autogen.sh  clean  configure.ac  nvidiacard.profile  progress.txt  readme  todo
daisy/: README
include/kutility/: image_io_jpeg.h
include/ocl/: cachedConstructs.h  cachedProgram.h
src/daisy/: PairRatios.txt  README  SdkMasterLog.csv  Unsaved Document 1  Unsaved Document 2  Unsaved Document 3  Unsaved Document 4  convTest.py  convolution_debugging.txt  convolutions.cl  daisyFilter7.cl  daisyGaussianFilters.cl  daisyGradient8.cl  daisyKernels.cl  daisyKernels_workingInPairsFast.cl  daisyMatchKernels.cl  daisyRealKernels.cl  daisyTest.py  daisyTransposes.cl  daisyVis.py  daisyVisRatios.py  deviceQuery.txt  gdaisy  gdaisy-speed-tests-0302-0122_withoutTransfers.csv  gdaisy-speed-tests-0302-0214_withTransfersNonRobust.csv  general.cpp  general.h  healthyOutput.ego  main.cpp  main.h  makeit  matchHelpers.cpp  matchHelpers.h  matchTest.py  oclDaisy.cpp  oclDaisy.h  oclDaisySearch.cpp  oclDaisySearch.h  oclDaisy_workingInPairsFast.cpp  oclMatchDaisy.cpp  (+2 more)
src/ocl/: cachedConstructs.c  cachedConstructs.cpp  cachedProgram.c  cachedProgram.cpp
